--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "commit": "git add . && git commit -m \"feat: 자동 커밋 - $(date +'%Y-%m-%d %H:%M:%S')\"",
+    "push": "git push origin main",
+    "save": "npm run commit && npm run push",
+    "auto-save": "git add . && git commit -m \"feat: 자동 저장 - $(date +'%Y-%m-%d %H:%M:%S')\" && git push origin main",
+    "quick-save": "./scripts/auto-commit.sh",
+    "node-save": "node scripts/auto-commit.js",
+    "watch-save": "nodemon --watch src --ext ts,tsx,js,jsx --exec \"npm run auto-save\""
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
